--- a/analysis/cogsci-paper/1-question-survey.ipynb
+++ b/analysis/cogsci-paper/1-question-survey.ipynb
@@ -11,26 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The pycodestyle_magic extension is already loaded. To reload it, use:\n",
-      "  %reload_ext pycodestyle_magic\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext pycodestyle_magic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -41,14 +33,13 @@
     "import scipy\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import itertools\n",
     "from scipy import stats\n",
     "\n",
     "# Utilities\n",
     "import math\n",
     "import json\n",
     "import pprint\n",
-    "import utilities.processing\n",
+    "import utilities.processing as processing\n",
     "\n",
     "# Make printing much more convenient\n",
     "log = pprint.pprint\n",
@@ -66,8 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "FILE_NAMES = [\n",
@@ -86,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +88,7 @@
        "100"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,84 +111,273 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'utilities.processing' has no attribute 'get_col_labels'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-42-0e8cd65e9be4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mnum_questions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQUESTIONS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mnum_judgements\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mJUDGEMENTS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_col_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'utilities.processing' has no attribute 'get_col_labels'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create dictionary to represent future DataFrame\n",
     "num_questions = len(QUESTIONS)\n",
     "num_judgements = len(JUDGEMENTS)\n",
-    "data = {label: [] for label in processing.get_col_labels()}"
+    "col_labels = processing.get_col_labels(num_questions,\n",
+    "                                       num_judgements,\n",
+    "                                       choice=False)\n",
+    "data = {label: [] for label in col_labels}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processing.fill_question_survey_data(data,\n",
+    "                                     real_responses,\n",
+    "                                     QUESTIONS,\n",
+    "                                     JUDGEMENTS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6200\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>condition</th>\n",
+       "      <th>consent</th>\n",
+       "      <th>q0j0</th>\n",
+       "      <th>q0j1</th>\n",
+       "      <th>q0j2</th>\n",
+       "      <th>q0j3</th>\n",
+       "      <th>q0j4</th>\n",
+       "      <th>q0score</th>\n",
+       "      <th>q1j0</th>\n",
+       "      <th>q1j1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>q8j2</th>\n",
+       "      <th>q8j3</th>\n",
+       "      <th>q8j4</th>\n",
+       "      <th>q8score</th>\n",
+       "      <th>q9j0</th>\n",
+       "      <th>q9j1</th>\n",
+       "      <th>q9j2</th>\n",
+       "      <th>q9j3</th>\n",
+       "      <th>q9j4</th>\n",
+       "      <th>q9score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3381</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>32</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3362</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>32</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3365</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>37</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3370</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>53</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3370</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 62 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['__builtins__',\n",
-       " '__cached__',\n",
-       " '__doc__',\n",
-       " '__file__',\n",
-       " '__loader__',\n",
-       " '__name__',\n",
-       " '__package__',\n",
-       " '__spec__']"
+       "  condition  consent  q0j0  q0j1  q0j2  q0j3  q0j4  q0score  q1j0  q1j1  \\\n",
+       "0         A        1     3     3     2     4     4     3381     4     3   \n",
+       "1         A        1     4     4     2     5     2     3362     4     4   \n",
+       "2         A        1     1     4     4     3     4     3365     2     4   \n",
+       "3         A        1     2     1     1     2     1     3370     2     2   \n",
+       "4         A        1     1     0     5     2     5     3370     3     4   \n",
+       "\n",
+       "    ...     q8j2  q8j3  q8j4  q8score  q9j0  q9j1  q9j2  q9j3  q9j4  q9score  \n",
+       "0   ...        3     2     2       32     4     3     4     3     3       29  \n",
+       "1   ...        4     4     2       32     5     0     5     4     2       32  \n",
+       "2   ...        4     3     3       37     5     2     5     4     4       26  \n",
+       "3   ...        3     2     3       53     3     2     1     2     2       36  \n",
+       "4   ...        5     4     0       23     4     2     6     5     0       29  \n",
+       "\n",
+       "[5 rows x 62 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dir(utilities.processing)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "follow = pd.DataFrame(data)\n",
-    "follow.head()"
+    "data = pd.DataFrame(data)\n",
+    "log(data.size)\n",
+    "data.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysizing Data\n",
+    "### Analysizing Data\n",
+    "\n",
     "We first split the data into two groups, one corresponding to those which received high scores for group A and one for those who received higher scores for group B. The groups themselves are in the constant section for reference, where the first five entries corresponding to group A and the last five to group B."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(54, 46)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Grab People with Consent\n",
-    "follow = follow[follow.consent == 1]\n",
+    "# Remove participants without consent\n",
+    "data = data[data.consent == 1]\n",
     "# Seperate into dataframes for each condition!\n",
-    "high_a = follow[follow.condition == 'A']\n",
-    "high_b = follow[follow.condition == 'B']\n",
+    "high_a = data[data.condition == 'A']\n",
+    "high_b = data[data.condition == 'B']\n",
     "a_size, b_size = len(high_a), len(high_b)\n",
     "a_size, b_size"
    ]
