Complete final figre graphs

--- a/analysis/5-cogsci-paper/1-experiment-one.ipynb
+++ b/analysis/5-cogsci-paper/1-experiment-one.ipynb
@@ -14,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext pycodestyle_magic"
@@ -23,7 +25,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Analytical Tools\n",
