--- a/analysis/9-randomized-final/1-integrity.ipynb
+++ b/analysis/9-randomized-final/1-integrity.ipynb
@@ -517,17 +517,17 @@
     "\n",
     "print('Control: {} removed ({:.3}%) {} left'.format(\n",
     "    control_removed,\n",
-    "    control_removed / len(control_responses),\n",
+    "    control_removed / len(control_responses) * 100,\n",
     "    len(new_control_responses)\n",
     "))\n",
     "print('Post: {} removed ({:.3}%) {} left'.format(\n",
     "    post_removed,\n",
-    "    post_removed / len(new_post_responses),\n",
+    "    post_removed / len(new_post_responses) * 100,\n",
     "    len(new_post_responses)\n",
     "))\n",
     "print('Upvote: {} removed ({:.3}%) {} left'.format(\n",
     "    upvote_removed,\n",
-    "    upvote_removed / len(new_upvote_responses),\n",
+    "    upvote_removed / len(new_upvote_responses) * 100,\n",
     "    len(new_upvote_responses)\n",
     "))"
    ]
