Compute effect size and difference

--- a/analysis/9-randomized-final/2-analysis.ipynb
+++ b/analysis/9-randomized-final/2-analysis.ipynb
@@ -14,7 +14,7 @@
         "%load_ext pycodestyle_magic"
       ],
       "outputs": [],
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {}
     },
     {
@@ -52,7 +52,7 @@
           ]
         }
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {}
     },
     {
@@ -84,7 +84,7 @@
         "JUDGMENT_LABELS = processing.get_judgment_labels(NUM_JUDGEMENTS)"
       ],
       "outputs": [],
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "collapsed": true
       }
@@ -102,7 +102,7 @@
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 4,
+          "execution_count": 6,
           "data": {
             "text/plain": [
               "161"
@@ -111,7 +111,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {}
     },
     {
@@ -137,7 +137,7 @@
         "        data['{}_diff'.format(j_label)] = high_data - low_data"
       ],
       "outputs": [],
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "collapsed": true
       }
@@ -175,7 +175,7 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<matplotlib.figure.Figure at 0x10fb5f9e8>"
+              "<matplotlib.figure.Figure at 0x10f0bfe80>"
             ],
             "image/png": [
               "iVBORw0KGgoAAAANSUhEUgAABZ0AAALoCAYAAAATAVvPAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\n",
@@ -767,7 +767,7 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<matplotlib.figure.Figure at 0x11af40eb8>"
+              "<matplotlib.figure.Figure at 0x10f235860>"
             ],
             "image/png": [
               "iVBORw0KGgoAAAANSUhEUgAABZ0AAALoCAYAAAATAVvPAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\n",
@@ -1368,7 +1368,7 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<matplotlib.figure.Figure at 0x11aed0dd8>"
+              "<matplotlib.figure.Figure at 0x112e42080>"
             ],
             "image/png": [
               "iVBORw0KGgoAAAANSUhEUgAABY0AAALoCAYAAAA0r9onAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\n",
@@ -1897,7 +1897,7 @@
           }
         }
       ],
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {}
     },
     {
@@ -1950,7 +1950,7 @@
           ]
         }
       ],
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "scrolled": false
       }
@@ -2003,7 +2003,7 @@
           ]
         }
       ],
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {}
     },
     {
@@ -2025,7 +2025,7 @@
         "    data['high_choice'] = high_choice_means"
       ],
       "outputs": [],
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {
         "collapsed": true,
         "scrolled": true
@@ -2058,7 +2058,7 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<matplotlib.figure.Figure at 0x11aed0a58>"
+              "<matplotlib.figure.Figure at 0x10f0d1780>"
             ],
             "image/png": [
               "iVBORw0KGgoAAAANSUhEUgAABZ0AAALoCAYAAAATAVvPAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\n",
@@ -2579,7 +2579,7 @@
           }
         }
       ],
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {}
     },
     {
@@ -2603,7 +2603,7 @@
           ]
         }
       ],
-      "execution_count": 11,
+      "execution_count": 13,
       "metadata": {}
     },
     {
@@ -2664,7 +2664,7 @@
         "        flattened_data['group'].append('post_{}'.format(group_info))"
       ],
       "outputs": [],
-      "execution_count": 34,
+      "execution_count": 14,
       "metadata": {
         "collapsed": true
       }
@@ -2686,7 +2686,7 @@
         },
         {
           "output_type": "execute_result",
-          "execution_count": 35,
+          "execution_count": 15,
           "data": {
             "text/plain": [
               "   choice  confidence  curiosity group  number  popularity  social_utility  \\\n",
@@ -2808,7 +2808,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 35,
+      "execution_count": 15,
       "metadata": {
         "scrolled": false
       }
@@ -2830,7 +2830,7 @@
           ]
         }
       ],
-      "execution_count": 37,
+      "execution_count": 16,
       "metadata": {
         "collapsed": true
       }
@@ -2867,7 +2867,7 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<matplotlib.figure.Figure at 0x11eb30b00>"
+              "<matplotlib.figure.Figure at 0x11328e550>"
             ],
             "image/png": [
               "iVBORw0KGgoAAAANSUhEUgAABuwAAAOjCAYAAABQgCJzAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\n",
@@ -3384,7 +3384,7 @@
           }
         }
       ],
-      "execution_count": 38,
+      "execution_count": 17,
       "metadata": {
         "scrolled": false
       }
@@ -3423,11 +3423,13 @@
         "    # Low vs None\n",
         "    print('{}, {}'.format(low_questions[judgment].size,\n",
         "        none_questions[judgment].size))\n",
+        "    print(low_questions[judgment].mean() - none_questions[judgment].mean())\n",
         "    print('{}: {}'.format(judgment, describe.independent_t_test(\n",
         "        low_questions[judgment], none_questions[judgment])))\n",
         "    # None vs High\n",
         "    print('{}, {}'.format(none_questions[judgment].size,\n",
         "        high_questions[judgment].size))\n",
+        "    print(none_questions[judgment].mean() - high_questions[judgment].mean())\n",
         "    print('{}: {}'.format(judgment, describe.independent_t_test(\n",
         "        none_questions[judgment], high_questions[judgment])))"
       ],
@@ -3439,13 +3441,15 @@
             "{'curiosity': 36}\n",
             "{'curiosity': 27}\n",
             "1485, 1340\n",
+            "-0.36086486758128533\n",
             "curiosity: t = -4.8, p = 1.669e-06 (1 greater)\n",
             "1340, 1485\n",
+            "-0.09435398763756986\n",
             "curiosity: t = -1.264, p = 0.2063 (1 greater)\n"
           ]
         }
       ],
-      "execution_count": 39,
+      "execution_count": 18,
       "metadata": {
         "scrolled": true
       }
@@ -3466,7 +3470,7 @@
           ]
         }
       ],
-      "execution_count": 45,
+      "execution_count": 19,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -3488,7 +3492,7 @@
         "    (question_data.group == 'upvote_low')]"
       ],
       "outputs": [],
-      "execution_count": 17,
+      "execution_count": 20,
       "metadata": {
         "collapsed": true
       }
@@ -3520,7 +3524,7 @@
         },
         {
           "output_type": "execute_result",
-          "execution_count": 18,
+          "execution_count": 21,
           "data": {
             "text/plain": [
               "<class 'statsmodels.iolib.summary.Summary'>\n",
@@ -3531,7 +3535,7 @@
               "Model:                          Logit   Df Residuals:                     2962\n",
               "Method:                           MLE   Df Model:                            7\n",
               "Date:                Fri, 15 Jun 2018   Pseudo R-squ.:                  0.1107\n",
-              "Time:                        12:12:39   Log-Likelihood:                -1830.7\n",
+              "Time:                        13:41:34   Log-Likelihood:                -1830.7\n",
               "converged:                       True   LL-Null:                       -2058.6\n",
               "                                        LLR p-value:                 2.302e-94\n",
               "==================================================================================\n",
@@ -3564,7 +3568,7 @@
               "  <th>Date:</th>          <td>Fri, 15 Jun 2018</td> <th>  Pseudo R-squ.:     </th>  <td>0.1107</td>  \n",
               "</tr>\n",
               "<tr>\n",
-              "  <th>Time:</th>              <td>12:12:39</td>     <th>  Log-Likelihood:    </th> <td> -1830.7</td> \n",
+              "  <th>Time:</th>              <td>13:41:34</td>     <th>  Log-Likelihood:    </th> <td> -1830.7</td> \n",
               "</tr>\n",
               "<tr>\n",
               "  <th>converged:</th>           <td>True</td>       <th>  LL-Null:           </th> <td> -2058.6</td> \n",
@@ -3607,7 +3611,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 18,
+      "execution_count": 21,
       "metadata": {}
     },
     {
@@ -3669,7 +3673,7 @@
               "Model:                          Logit   Df Residuals:                     2968\n",
               "Method:                           MLE   Df Model:                            1\n",
               "Date:                Fri, 15 Jun 2018   Pseudo R-squ.:                 0.02177\n",
-              "Time:                        12:12:39   Log-Likelihood:                -2013.8\n",
+              "Time:                        13:41:34   Log-Likelihood:                -2013.8\n",
               "converged:                       True   LL-Null:                       -2058.6\n",
               "                                        LLR p-value:                 2.877e-21\n",
               "==============================================================================\n",
@@ -3696,7 +3700,7 @@
               "  <th>Date:</th>          <td>Fri, 15 Jun 2018</td> <th>  Pseudo R-squ.:     </th>  <td>0.02177</td> \n",
               "</tr>\n",
               "<tr>\n",
-              "  <th>Time:</th>              <td>12:12:39</td>     <th>  Log-Likelihood:    </th> <td> -2013.8</td> \n",
+              "  <th>Time:</th>              <td>13:41:34</td>     <th>  Log-Likelihood:    </th> <td> -2013.8</td> \n",
               "</tr>\n",
               "<tr>\n",
               "  <th>converged:</th>           <td>True</td>       <th>  LL-Null:           </th> <td> -2058.6</td> \n",
@@ -3741,7 +3745,7 @@
               "Model:                          Logit   Df Residuals:                     2968\n",
               "Method:                           MLE   Df Model:                            1\n",
               "Date:                Fri, 15 Jun 2018   Pseudo R-squ.:                 0.09755\n",
-              "Time:                        12:12:39   Log-Likelihood:                -1857.8\n",
+              "Time:                        13:41:34   Log-Likelihood:                -1857.8\n",
               "converged:                       True   LL-Null:                       -2058.6\n",
               "                                        LLR p-value:                 2.419e-89\n",
               "==============================================================================\n",
@@ -3768,7 +3772,7 @@
               "  <th>Date:</th>          <td>Fri, 15 Jun 2018</td> <th>  Pseudo R-squ.:     </th>  <td>0.09755</td> \n",
               "</tr>\n",
               "<tr>\n",
-              "  <th>Time:</th>              <td>12:12:39</td>     <th>  Log-Likelihood:    </th> <td> -1857.8</td> \n",
+              "  <th>Time:</th>              <td>13:41:34</td>     <th>  Log-Likelihood:    </th> <td> -1857.8</td> \n",
               "</tr>\n",
               "<tr>\n",
               "  <th>converged:</th>           <td>True</td>       <th>  LL-Null:           </th> <td> -2058.6</td> \n",
@@ -3813,7 +3817,7 @@
               "Model:                          Logit   Df Residuals:                     2967\n",
               "Method:                           MLE   Df Model:                            2\n",
               "Date:                Fri, 15 Jun 2018   Pseudo R-squ.:                 0.09971\n",
-              "Time:                        12:12:39   Log-Likelihood:                -1853.4\n",
+              "Time:                        13:41:34   Log-Likelihood:                -1853.4\n",
               "converged:                       True   LL-Null:                       -2058.6\n",
               "                                        LLR p-value:                 7.193e-90\n",
               "==============================================================================\n",
@@ -3841,7 +3845,7 @@
               "  <th>Date:</th>          <td>Fri, 15 Jun 2018</td> <th>  Pseudo R-squ.:     </th>  <td>0.09971</td> \n",
               "</tr>\n",
               "<tr>\n",
-              "  <th>Time:</th>              <td>12:12:39</td>     <th>  Log-Likelihood:    </th> <td> -1853.4</td> \n",
+              "  <th>Time:</th>              <td>13:41:34</td>     <th>  Log-Likelihood:    </th> <td> -1853.4</td> \n",
               "</tr>\n",
               "<tr>\n",
               "  <th>converged:</th>           <td>True</td>       <th>  LL-Null:           </th> <td> -2058.6</td> \n",
@@ -3869,7 +3873,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 19,
+      "execution_count": 22,
       "metadata": {
         "scrolled": false
       }
@@ -3905,7 +3909,7 @@
           ]
         }
       ],
-      "execution_count": 20,
+      "execution_count": 23,
       "metadata": {}
     },
     {
@@ -3921,7 +3925,7 @@
         "upvote_responses.to_pickle('raw-data/exp_two_responses.pkl')"
       ],
       "outputs": [],
-      "execution_count": 21,
+      "execution_count": 24,
       "metadata": {
         "collapsed": true
       }
@@ -3930,7 +3934,7 @@
       "cell_type": "code",
       "source": [],
       "outputs": [],
-      "execution_count": 22,
+      "execution_count": 25,
       "metadata": {
         "collapsed": true
       }
