--- a/analysis/5-cogsci-paper/3-comparison.ipynb
+++ b/analysis/5-cogsci-paper/3-comparison.ipynb
@@ -11,29 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The pycodestyle_magic extension is already loaded. To reload it, use:\n",
+      "  %reload_ext pycodestyle_magic\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext pycodestyle_magic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/hermish/anaconda/lib/python3.6/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
-      "  from pandas.core import datetools\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Analytical Tools\n",
     "import numpy as np\n",
@@ -74,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,14 +84,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "292 292 1.2349315068493145 0.4554794520547946 0.7794520547945198\n",
+      "292 292 0.7794520547945198\n",
+      "1.2349315068493145 0.4554794520547946 0.08717639257383701 0.06819966071167162\n",
       "t = 7.04, p = 5.36e-12 (0 greater)\n",
       "292 292 0.6472602739726027 0.5479452054794521 0.09931506849315053\n",
       "t = 5.71, p = 1.81e-08 (0 greater)\n"
@@ -106,10 +105,15 @@
     "\n",
     "print(len(curiosity_difference_one),\n",
     "      len(curiosity_difference_two),\n",
-    "      curiosity_difference_one.mean(),\n",
-    "      curiosity_difference_two.mean(),\n",
     "      curiosity_difference_one.mean() -\n",
     "      curiosity_difference_two.mean())\n",
+    "\n",
+    "print(curiosity_difference_one.mean(),\n",
+    "      curiosity_difference_two.mean(),\n",
+    "      stats.sem(curiosity_difference_one),\n",
+    "      stats.sem(curiosity_difference_two),\n",
+    ")\n",
+    "\n",
     "print(describe.independent_t_test(curiosity_difference_one, curiosity_difference_two))\n",
     "\n",
     "high_choice_one = exp_one_responses['high_choice']\n",
@@ -127,9 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -150,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
