--- a/analysis/5-cogsci-paper/2-experiment-two.ipynb
+++ b/analysis/5-cogsci-paper/2-experiment-two.ipynb
@@ -1103,7 +1103,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1579,7 +1581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   },
   "nteract": {
    "version": "0.5.5"
