Include new epxeriment

--- a/analysis/13-final-baseline/1-analysis.ipynb
+++ b/analysis/13-final-baseline/1-analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,35 +47,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'data/raw.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-67a17cf3938b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mmaster_responses\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mFILE_NAMES\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m         \u001b[0mmaster_responses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/raw.json'"
+     ]
+    }
+   ],
    "source": [
-    "GROUPS = 2\n",
-    "QUESTIONS = 5\n",
-    "JUDGMENTS = 6\n",
-    "SCORE_THRESHOLD = 240.9\n",
+    "QUESTIONS = 10\n",
+    "JUDGMENTS = 4\n",
     "\n",
     "FILE_NAMES = [\n",
-    "    'data/raw-3.json',\n",
+    "    'data/raw.json',\n",
     "]\n",
     "\n",
     "master_responses = []\n",
     "for name in FILE_NAMES:\n",
     "    with open(name) as file:\n",
     "        master_responses.extend(json.loads(line) for line in file if line)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _get_group(score):\n",
-    "    if score < SCORE_THRESHOLD:\n",
-    "        return 0\n",
-    "    return 1"
    ]
   },
   {
@@ -87,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -99,21 +97,20 @@
     "    'attention': []\n",
     "}\n",
     "\n",
-    "for g_num in range(GROUPS):\n",
-    "    for q_num in range(QUESTIONS):\n",
-    "        data['g{}_q{}_score'.format(g_num, q_num)] = []\n",
-    "        data['g{}_q{}_index'.format(g_num, q_num)] = []\n",
-    "        for j_num in range(JUDGMENTS):\n",
-    "            data['g{}_q{}_j{}'.format(g_num, q_num, j_num)] = []"
+    "for q_num in range(QUESTIONS):\n",
+    "    data['q{}_score'.format(q_num)] = []\n",
+    "    data['q{}_index'.format(q_num)] = []\n",
+    "    for j_num in range(JUDGMENTS):\n",
+    "        data['q{}_j{}'.format(q_num, j_num)] = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ANSWER_KEYS = ('Q0', 'Q1', 'Q2', 'Q3', 'Q4', 'Q5')\n",
+    "ANSWER_KEYS = ('Q0', 'Q1', 'Q2', 'Q3')\n",
     "\n",
     "for person in master_responses:\n",
     "    # Grab data & ID\n",
@@ -124,17 +121,10 @@
     "    question_scores = person_data[0]['questionScores']\n",
     "    question_indices = person_data[0]['questionIndices']\n",
     "    \n",
-    "    counters = [0, 0]\n",
-    "    question_labels = []\n",
-    "    for score in question_scores:\n",
-    "        g_num = _get_group(score)\n",
-    "        question_labels.append('g{}_q{}'.format(g_num, counters[g_num]))\n",
-    "        counters[g_num] += 1\n",
-    "    \n",
-    "    for q_label, score in zip(question_labels, question_scores):\n",
-    "        data['{}_score'.format(q_label)].append(score)\n",
-    "    for q_label, index in zip(question_labels, question_indices):\n",
-    "        data['{}_index'.format(q_label)].append(index)\n",
+    "    for q_num, score in zip(range(QUESTIONS), question_scores):\n",
+    "        data['q{}_score'.format(q_num)].append(score)\n",
+    "    for q_num, score in zip(range(QUESTIONS), question_indices):\n",
+    "        data['q{}_index'.format(q_num)].append(score)  \n",
     "    \n",
     "    # Get consent response\n",
     "    consent_answer = json.loads(person_data[0]['responses'])\n",
@@ -144,11 +134,11 @@
     "    # Fill in judgments\n",
     "    judgment_indices = person_data[0]['judgmentIndices']\n",
     "    \n",
-    "    for q_label, likert_index in zip(question_labels, range(2, 14)):\n",
+    "    for q_num, likert_index in zip(range(QUESTIONS), range(2, 12)):\n",
     "        answer = json.loads(person_data[likert_index]['responses'])\n",
     "        for j_label, key in zip(judgment_indices, ANSWER_KEYS):\n",
     "            rating = int(answer[key])\n",
-    "            data['{}_j{}'.format(q_label, j_label)].append(rating)\n",
+    "            data['q{}_j{}'.format(q_num, j_label)].append(rating)\n",
     "\n",
     "    # Attention check\n",
     "    attention_answer = json.loads(person_data[7]['responses'])\n",
@@ -165,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +360,7 @@
        "[5 rows x 83 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -411,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Saving Data"
+    "## Analysis"
    ]
   },
   {
@@ -503,7 +493,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_pickle('data/responses.pkl')"
+    "for j_num in range(JUDGMENTS):\n",
+    "    headings = []\n",
+    "    for q_num in range(QUESTIONS):\n",
+    "        headings.append('q{}_j{}'.format(q_num, j_num))\n",
+    "\n",
+    "    rating_mean = data[headings].mean(axis=1)\n",
+    "    data['j{}_mean'.format(j_num)] = rating_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "means, errs = [], []\n",
+    "for j_num in range(JUDGMENTS):\n",
+    "    values = sample['j{}_mean'.format(j_num)]\n",
+    "    means.append(values.mean())\n",
+    "    errs.append(stats.sem(values))\n",
+    "\n",
+    "print(means)\n",
+    "print(errs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mplotting\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot_single_bar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmeans\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m <no docstring>\n",
+       "\u001b[0;31mFile:\u001b[0m      ~/Repositories/concepts-research/analysis/13-final-baseline/utilities/plotting.py\n",
+       "\u001b[0;31mType:\u001b[0m      function\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "PLOTTING_OPTIONS = {\n",
+    "    'ylabel': 'Ratings',\n",
+    "    'ticks': ['Curiosity', 'Confidence', 'Usefulness', 'Social Utility'],\n",
+    "    'title': 'All Questions',\n",
+    "    'size': (12, 6)\n",
+    "}\n",
+    "plotting.plot_single_bar(means, errs, **PLOTTING_OPTIONS)"
    ]
   },
   {
